force-app/main/default/objects/RTLD_Entry__mdt/RTLD_Entry__mdt.object-meta.xml
<CustomObject>
    <description>Content available to the Rich Text Custom Label Display Lightning Web Component</description>
    <label>RTLD Entry</label>
    <pluralLabel>RTLD Entries</pluralLabel>
</CustomObject>