force-app/main/default/objects/RTLD_Entry__mdt/fields/DisplayTitle__c.field-meta.xml
<CustomField>
    <fullName>DisplayTitle__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Title?</label>
    <type>Checkbox</type>
</CustomField>