force-app/main/default/objects/RTLD_Entry__mdt/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon</label>
    <length>50</length>
    <type>Text</type>
</CustomField>