force-app/main/default/objects/RTLD_Entry__mdt/fields/IsHidden__c.field-meta.xml
<CustomField>
    <fullName>IsHidden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hidden</label>
    <type>Checkbox</type>
</CustomField>